--- a/doc/src/pages/index.module.css
+++ b/doc/src/pages/index.module.css
@@ -21,3 +21,14 @@
   align-items: center;
   justify-content: center;
 }
+
+.tip {
+  width: 1000px;
+  margin: auto;
+  text-align: center;
+  border: 1px solid rgb(217, 217, 217);
+  padding: 5px 15px;
+  border-radius: 20px;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.65);
+}
